logs/flaskcbv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flaskcbv'...
Listing './lib/python3.5/site-packages/flaskcbv/conf'...
Listing './lib/python3.5/site-packages/flaskcbv/core'...
Listing './lib/python3.5/site-packages/flaskcbv/forms'...
Listing './lib/python3.5/site-packages/flaskcbv/protos'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/apps'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/apps/main'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/apps/main/templates'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/apps/main/templates/main'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/misc'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/misc/mixins'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/settings'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/templates'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/custom/templates/misc'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple/apps'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple/apps/main'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple/apps/main/templates'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple/apps/main/templates/main'...
Listing './lib/python3.5/site-packages/flaskcbv/protos/simple/settings'...
Listing './lib/python3.5/site-packages/flaskcbv/scripts'...
Listing './lib/python3.5/site-packages/flaskcbv/scripts/commands'...
Compiling './lib/python3.5/site-packages/flaskcbv/scripts/commands/initproject.py'...
***   File "./lib/python3.5/site-packages/flaskcbv/scripts/commands/initproject.py", line 84
    print "Done!"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flaskcbv/scripts/commands/startapp.py'...
***   File "./lib/python3.5/site-packages/flaskcbv/scripts/commands/startapp.py", line 9
    print "Starting application"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flaskcbv/templates'...
Listing './lib/python3.5/site-packages/flaskcbv/templatetags'...
Compiling './lib/python3.5/site-packages/flaskcbv/templatetags/__init__.py'...
***   File "./lib/python3.5/site-packages/flaskcbv/templatetags/__init__.py", line 37
    print self.environment.extensions
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flaskcbv/url'...
Listing './lib/python3.5/site-packages/flaskcbv/view'...
Listing './lib/python3.5/site-packages/flaskcbv-1.4.11.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
